--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "frankyframework/franky-core",
     "type": "library",
     "description": "Funciones de core",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Ussiel Acevedo",
